public class FindNewBooking {
    public void bookingReplacement() {
        System.out.println("We found a new booking for you");
    }
}