public class NoRoom {
    public void noRoom() {
        System.out.println("No room available");
    }
}
